...
        WeatherCity("Columbus, Georgia", 32.4609, -84.9877),
        WeatherCity("Columbus, Ohio", 39.9612, -82.9988),
        WeatherCity("Concord, New Hampshire", 43.2081, -71.5376),
        WeatherCity("Corvallis, Oregon", 44.5646, -123.2620),
        WeatherCity("Dallas, Texas", 32.7767, -96.7970),
        WeatherCity("Denton, Texas", 33.2148, -97.1331),
        WeatherCity("Denver, Colorado", 39.7392, -104.9903),
        WeatherCity("Des Moines, Iowa", 41.5868, -93.6250),
        WeatherCity("Detroit, Michigan", 42.3314, -83.0458),
        WeatherCity("Dover, Delaware", 39.1573, -75.5197),
        WeatherCity("Duluth, Minnesota", 46.7867, -92.1005),
        WeatherCity("Durham, North Carolina", 36.0184, -78.8750),
        WeatherCity("Eau Claire, Wisconsin", 44.8113, -91.4985),
...
        WeatherCity("Beloeil, Quebec", 45.5667, -73.2000),
        WeatherCity("Boucherville, Quebec", 45.5910, -73.4360),
        WeatherCity("Brampton, Ontario", 43.7315, -79.7624),
        WeatherCity("Brantford, Ontario", 43.1394, -80.2644),
        WeatherCity("Bridgewater, Nova Scotia", 44.3780, -64.5190),
        WeatherCity("Brockville, Ontario", 44.5894, -75.6843),
        WeatherCity("Bromont, Quebec", 45.3167, -72.6500),
        WeatherCity("Brooks, Alberta", 50.5640, -111.8980),
        WeatherCity("Burnaby, British Columbia", 49.2488, -122.9805),
        WeatherCity("Burlington, Ontario", 43.3255, -79.7990),
        WeatherCity("Cambridge, Ontario", 43.3616, -80.3144),
        WeatherCity("Cambridge Bay, Nunavut", 69.1169, -105.0586),
        WeatherCity("Campbell River, British Columbia", 50.0244, -125.2475),
...
